2012-02-06  Robert Larice
 * src/include/ngspice/inpdefs.h ,
 * src/spicelib/parser/inplkmod.c :
   rewrite INPlookMod(), return INPmodel*/NULL instead of int 1/0

2012-02-06  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/define.c ,
 * src/frontend/device.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/parse.c ,
 * src/frontend/vectors.c ,
 * src/frontend/parser/complete.c ,
 * src/frontend/parser/unixcom.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/ngspice/ngspice.h ,
 * src/spicelib/parser/inpptree.c :
   use strchr() instead of index()
     which is depreciated

============================ ngspice-24 ==================================
2012-01-30  Dietmar Warning
 * src/spicelib/devices/dio/diotemp.c: Add temperature dependent
   junction potentials also for tlevc=1 capacitor temperature model

2012-01-28  Robert Larice
 * src/include/ngspice/ngspice.h :
  define NAN for non C99 environments

2012-01-28  Holger Vogt
 * configure.ac, compile_min.sh: prepare for release 24
 * mifdelete.c: prevent crash upon 'reset', if codemodel is an array
   FIXME: leads to small memory leak

2012-01-27  Holger Vogt
 * NEWS, INSTALL, tests\bin\ngspice.pm, /visualc/include/ngspice/config.h:
   prepare for release 24

2012-01-24  Dietmar Warning
 * src/spicelib/devices/bjt/bjttemp.c: Add temperature dependent
   junction potentials also for tlevc=1 capacitor temperature model

2012-01-15  Robert Larice
 * src/spicelib/devices/hisim2/hsm2eval.c ,
 * src/spicelib/devices/hisim2/hsm2temp.c ,
 * src/spicelib/devices/hisimhv/hsmhveval.c :
  bug fix, a numerical problem in the hisim2 an hisimhv models

  First seen when compiled with gcc-4.6.2 -g -O1

  The macro `Fn_SZ' which boils down to
    1/2 * (x + sqrt(x*x + c*c))
  was used in a context where a negative result
    blew up the following computations.
  (used to compute `Egidl', which is used to
   compute exp(-1 / (Egidl + small_constant)))

  For large negative values of x the computation
  boils down to