@@ -126,7 +126,7 @@ int MIFconvTest(
                     if (fabs(value - last_value) > tol) {
                         if(ckt->enh->conv_debug.report_conv_probs) {
                             ENHreport_conv_prob(ENH_ANALOG_INSTANCE,
-                                                (char *) here->MIFname,
+                                                here->MIFname,
                                                 "");
                         }
                         ckt->CKTnoncon++;
